Fixes routing to container sessions for non-`GET /` methods and paths

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -2,11 +2,13 @@ server {
     listen 80;
     server_name  localhost;
 
-    # Proxy request to container session after a [X-Accel-Redirect](http://wiki.nginx.org/X-accel) 
-    # header from server.js
-    location ~ /internal-session/(.*) {
+    # Following a [X-Accel-Redirect](http://wiki.nginx.org/X-accel) 
+    # header from server.js proxy request to container session
+    # Requires Nginx>=1.11.6 for proxy_method variable
+    location ~ /proxy-to-session/(GET|POST|PUT|DELETE)/(.*) {
         internal;
-        proxy_pass $1;
+        proxy_method $1;
+        proxy_pass $2;
     }
 
     # Serve server.js
