Add missing nginx header

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -7,8 +7,9 @@ server {
     # Requires Nginx>=1.11.6 for proxy_method variable
     location ~ /proxy-to-session/(GET|POST|PUT|DELETE)/(.*) {
         internal;
-        proxy_method $1;
-        proxy_pass $2;
+        proxy_method        $1;
+        proxy_pass          $2;
+        proxy_set_header    X-Nginx         yes;
     }
 
     # Serve server.js
