Fix comment on Nginx config

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -4,7 +4,7 @@ server {
 
     # Following a [X-Accel-Redirect](http://wiki.nginx.org/X-accel) 
     # header from server.js proxy request to container session
-    # Requires Nginx>=1.11.6 for proxy_method variable
+    # Requires Nginx>=1.11.6 for proxy_method with variable
     location ~ /proxy-to-session/(GET|POST|PUT|DELETE)/(.*) {
         internal;
         proxy_method        $1;
