Updates sibyl-server to install data and run UI build
Drops surge from dependencies as causing install issues

--- a/deploy/sibyl-server/Dockerfile
+++ b/deploy/sibyl-server/Dockerfile
@@ -1,12 +1,18 @@
 # Container for running Sibyl's Node.js server
 
-FROM mhart/alpine-node
+FROM node:alpine
 
 # Install system packages
-RUN apk update \
- && apk upgrade \
- && apk add bash curl docker jq \
- && rm -rf /var/cache/apk/*
+RUN apk add --no-cache bash curl docker jq
+
+# Install dat
+# A `global` install fails (permissions error) so we install in `/bin` and
+# create a symlink
+RUN cd /bin \
+ && apk add --no-cache --virtual build-dependencies python g++ make \
+ && npm install dat \
+ && apk del build-dependencies \
+ && ln -s /bin/node_modules/.bin/dat dat
 
 # Install kubctrl
 RUN curl -L -o /bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v1.6.4/bin/linux/amd64/kubectl \
@@ -19,7 +25,7 @@ WORKDIR /usr/app
 # is not re-run when an unrelated file (e.g. `sibyl.sh`)
 # is changed
 COPY package.json .
-RUN npm install
+RUN npm install && npm run build
 
 # Now copy over everything
 COPY . .
