--- a/deploy/sibyl-builder/Dockerfile
+++ b/deploy/sibyl-builder/Dockerfile
@@ -1,15 +1,24 @@
 # Container image for building Sibyl's base images
 
-FROM alpine
+FROM ubuntu:16.04
 
-RUN apk add --no-cache curl docker
+RUN apt-get update \
+ && apt-get install -y docker.io curl \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/
 
-RUN mkdir -p /usr/app
-WORKDIR /usr/app
+COPY run.sh /usr/app/run.sh
+RUN chmod +x /usr/app/run.sh
 
-COPY run.sh .
-RUN chmod +x run.sh
+RUN apt-get update \
+ && apt-get install -y cron \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/
 
-RUN echo "0 12 * * *     /usr/app/run.sh" > /etc/crontabs/root
 
-CMD ["crond", "-f", "-d", "0"]
+ADD crontab /etc/cron.d/sibyl-builder
+RUN chmod 0644 /etc/cron.d/sibyl-builder
+
+RUN touch /var/log/cron.log
+ 
+CMD cron -f -L15 
