--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -10,6 +10,13 @@ server {
         proxy_method        $1;
         proxy_pass          $2;
         proxy_set_header    X-Nginx         yes;
+
+        ## Magic incantations to handle Server-Sent Events (SSE)
+        proxy_http_version  1.1;
+        proxy_set_header    Connection       "";
+        proxy_buffering     off;
+        proxy_cache         off;
+        chunked_transfer_encoding off;
     }
 
     # Serve server.js
@@ -19,6 +26,14 @@ server {
         proxy_set_header    X-Real-IP        $remote_addr;
         proxy_set_header    X-Forwarded-For  $proxy_add_x_forwarded_for;
         proxy_set_header    X-Nginx          yes;
+
+        ## Magic incantations to handle Server-Sent Events (SSE)
+        proxy_http_version  1.1;
+        proxy_set_header    Connection       "";
+        proxy_buffering     off;
+        proxy_cache         off;
+        chunked_transfer_encoding off;
+
     }
 
 }
