Fix server name

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name  localhost via.stenci.la;
+    server_name  localhost open.stenci.la;
 
     # Following a [X-Accel-Redirect](http://wiki.nginx.org/X-accel) 
     # header from server.js proxy request to container session
