Serve static for Stencila using Nginx; remove uneeded incantations

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -10,13 +10,11 @@ server {
         proxy_method        $1;
         proxy_pass          $2;
         proxy_set_header    X-Nginx         yes;
+    }
 
-        ## Magic incantations to handle Server-Sent Events (SSE)
-        proxy_http_version  1.1;
-        proxy_set_header    Connection       "";
-        proxy_buffering     off;
-        proxy_cache         off;
-        chunked_transfer_encoding off;
+    # Serve Stencila static files directly
+    location /static/stencila/ {
+        root /usr/app/node_modules/stencila/build;
     }
 
     # Serve server.js
@@ -33,7 +31,6 @@ server {
         proxy_buffering     off;
         proxy_cache         off;
         chunked_transfer_encoding off;
-
     }
 
 }
