--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "standard"
   },
   "repository": "stencila/open",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "devDependencies": {
     "standard": "^10.0.2"
   },
