Adds missing files and packages, refactors Makefile

--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Launch Sibyl containers",
   "main": "index.js",
   "scripts": {
-    "test": "standard"
+    "test": "standard",
+    "watch": "bankai build --watch client/index.js dist/",
+    "build": "NODE_ENV=production bankai build --verbose client/index.js dist/",
+    "start": "PORT=3000 TOKEN_SECRET='mysecret' nodemon --ignore dist/ --ignore client/ --ignore bundles/ server/server.js | merry",
+    "serve": "node server/server.js"
   },
   "repository": "stencila/open",
   "license": "Apache-2.0",
   "devDependencies": {
+    "bankai": "^8.1.1",
+    "nodemon": "^1.11.0",
     "standard": "^10.0.2"
   },
   "dependencies": {
@@ -26,6 +32,7 @@
     "send": "^0.15.3",
     "shallowequal": "^1.0.2",
     "sheetify": "^6.1.0",
+    "tachyons": "^4.7.4",
     "uuid": "^3.1.0",
     "xhr": "^2.4.0"
   }
