--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "bankai build client/index.js",
+    "debug": "DEBUG=* TOKEN_SECRET=platypus PORT=3000 node --inspect -r pino-debug server/server | merry",
     "test": "standard",
     "start": "TOKEN_SECRET=platypus PORT=3000 nodemon -i dist/ -i client/ -i bundles/ server/server | merry",
     "watch": "bankai build -w client/index.js dist/"
@@ -14,6 +15,7 @@
   "devDependencies": {
     "bankai": "^8.1.1",
     "nodemon": "^1.11.0",
+    "pino-debug": "^1.0.3",
     "standard": "^10.0.2"
   },
   "dependencies": {
