--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "kubernetes-client": "^3.14.0",
     "merry": "^5.4.0",
     "pino": "^4.7.1",
-    "random-port": "^0.1.0"
+    "random-port": "^0.1.0",
+    "retry-request": "^3.0.0"
   }
 }
