Serve static files

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dockerode": "^2.5.0",
     "kubernetes-client": "^3.14.0",
     "merry": "^5.4.0",
+    "path-is-inside": "^1.0.2",
     "pino": "^4.7.1",
     "random-port": "^0.1.0",
     "retry-request": "^3.0.0"
