--- a/package.json
+++ b/package.json
@@ -4,25 +4,29 @@
   "description": "Stencila in the cloud",
   "scripts": {
     "lint": "standard",
-    "start": "if [ \"$NODE_ENV\" = \"development\" ]; then nodemon lib/serve.js | merry; else node lib/serve.js; fi"
+    "start": "if [ \"$NODE_ENV\" = \"development\" ]; then nodemon lib/serve.js | merry; else node lib/serve.js; fi",
+    "deps-uptodate": "ncu",
+    "deps-used": "dependency-check --entry lib/serve.js . && dependency-check --extra --no-dev --entry lib/serve.js ."
   },
   "repository": "https://github.com/stencila/cloud",
   "license": "Apache-2.0",
   "devDependencies": {
-    "nodemon": "^1.11.0",
-    "standard": "^10.0.3"
+    "dependency-check": "^3.1.0",
+    "nodemon": "^1.17.5",
+    "npm-check-updates": "^2.14.2",
+    "standard": "^11.0.1"
   },
   "dependencies": {
     "body": "^5.1.0",
     "cookie": "^0.3.1",
-    "dockerode": "^2.5.0",
-    "jsonwebtoken": "^8.1.1",
-    "kubernetes-client": "^3.14.0",
-    "merry": "^5.4.0",
+    "dockerode": "^2.5.5",
+    "jsonwebtoken": "^8.3.0",
+    "kubernetes-client": "^5.3.0",
+    "merry": "^5.5.2",
     "path-is-inside": "^1.0.2",
-    "pino": "^4.7.1",
+    "pino": "^4.17.3",
     "random-port": "^0.1.0",
-    "retry-request": "^3.0.0",
-    "send": "^0.16.1"
+    "retry-request": "^4.0.0",
+    "send": "^0.16.2"
   }
 }
