Fix tests and CI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ services:
 script:
   - make lint
   - make cover
-  - make check
+  - make build
   - make docs
 
 # Upload test coverage to codecov
