--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependency-check": "^3.2.1",
     "jest": "^23.6.0",
     "npm-check-updates": "^2.14.2",
+    "standard": "^12.0.1",
     "ts-jest": "^23.10.4",
     "ts-node-dev": "^1.0.0-pre.30",
     "tslint": "^5.11.0",
@@ -28,6 +29,8 @@
     "typescript": "^3.1.1"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "kubernetes-client": "^6.1.0",
+    "pino": "^5.7.0"
   }
 }
