--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^3.1.1"
   },
   "dependencies": {
+    "@sentry/node": "^4.6.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "kubernetes-client": "^6.1.0",
