--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ after_success:
 # Deploy documentation to Github Pages
 # See https://docs.travis-ci.com/user/deployment/pages/
 deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  local-dir: docs
-  on:
-    branch: master
+  - provider: pages
+    skip-cleanup: true
+    github-token: $GITHUB_TOKEN
+    local-dir: docs
+    on:
+      branch: master
