--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,11 @@ script:
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 
+# Prevent Github Pages from using Jekyll
+# which causes docs files starting with underscores to be ignored
+before_deploy:
+  - touch docs/.nojekyll
+
 # Deploy documentation to Github Pages
 # See https://docs.travis-ci.com/user/deployment/pages/
 deploy:
