--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sentry/node": "^4.6.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "kubernetes-client": "^6.9.0",
     "pino": "^5.11.1",
     "retry-request": "^4.0.0"
