--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/express-jwt": "0.0.41",
     "@types/jest": "^24.0.6",
     "dependency-check": "^3.3.0",
     "jest": "^24.1.0",
