--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "cover": "jest --collectCoverage",
     "build": "tsc",
     "docs": "typedoc --readme README.md --out ./docs ./src",
-    "start": "if [ \"$NODE_ENV\" = \"development\" ]; then ts-node-dev src/server.ts; else node dist/server.js; fi",
-    "deps-used": "npm run build && dependency-check --entry dist/server.js . && dependency-check --extra --no-dev --entry dist/server.js ."
+    "start": "if [ \"$NODE_ENV\" = \"development\" ]; then ts-node-dev src/serve.ts; else node dist/serve.js; fi",
+    "deps-used": "npm run build && dependency-check --entry dist/serve.js . && dependency-check --extra --no-dev --entry dist/serve.js ."
   },
   "repository": "https://github.com/stencila/cloud",
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/express-jwt": "0.0.41",
+    "@types/http-proxy": "^1.16.2",
     "@types/jest": "^24.0.6",
     "dependency-check": "^3.3.0",
     "jest": "^24.1.0",
@@ -29,11 +30,10 @@
   },
   "dependencies": {
     "@sentry/node": "^4.6.3",
-    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "http-proxy": "^1.17.0",
     "kubernetes-client": "^6.9.0",
-    "pino": "^5.11.1",
-    "retry-request": "^4.0.0"
+    "pino": "^5.11.1"
   }
 }
